# estruturas_de_dados2

./: README.md  dados.csv  etl.py  pipeline.py  pyproject.toml
